--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c36da149",
+   "id": "7febc0a8",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bb580900",
+   "id": "4754886d",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a9c539cc",
+   "id": "66a2e1e3",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "51742c0d",
+   "id": "a55e2b40",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d6286c33",
+   "id": "f6f598fb",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8789e40e",
+   "id": "26d1c62e",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "66f25e94",
+   "id": "16e56615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "59de02a6",
+   "id": "4ba6b33a",
    "metadata": {},
    "outputs": [
     {
@@ -842,14 +842,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b5f3902c",
+   "execution_count": 22,
+   "id": "32d41127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_box_temp = '''\n",
+    "<dl>\n",
+    "<dt>Hotel Name<dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City<dt><dd>{City}</dd>\n",
+    "<dt>Country<dt><dd>{Country}</dd>\n",
+    "<dt>Max Temp<dt><dd>{Max Temp}</dd>\n",
+    "</dl>\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3a8f567f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hotel_info = [info_box_temp.format(**row) for index, row in hotel_df.iterrows()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5f4dc5ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67bd57b751484204b1263015b757fc9a",
+       "model_id": "3d8cfe89cbd64d73b1a45c2e9e7a150f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -865,20 +892,26 @@
     "# Create heatmanp for desired temperature\n",
     "locations = hotel_df[['Lat','Lng']]\n",
     "max_temp = hotel_df['Max Temp']\n",
+    "\n",
     "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "\n",
     "heatmap_layer = gmaps.heatmap_layer(locations,\n",
     "                                    weights=max_temp,\n",
     "                                    dissipating=False,\n",
     "                                    max_intensity = 300,\n",
     "                                    point_radius=4)\n",
     "fig.add_layer(heatmap_layer)\n",
+    "\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
     "fig"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c5a5896",
+   "id": "6daf2571",
    "metadata": {},
    "outputs": [],
    "source": []
