--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "477270ea",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# import dependencies\n",
@@ -18,7 +22,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "b7fd062e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -146,7 +154,7 @@
    ],
    "source": [
     "# Read cities.csv\n",
-    "# The resource file is from another project of mine which can be foudnd in my GitHub\n",
+    "# The resource file is from another project of mine which can be founded in my GitHub\n",
     "# Repository name: API-UofT-WorldWeatherAnalysis\n",
     "city_data_df = pd.read_csv('Resources/cities.csv')\n",
     "city_data_df.head()"
@@ -156,7 +164,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d2b1610b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -188,7 +200,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "eef32b49",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Configure gmaps for using API key\n",
@@ -199,12 +215,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "d2c4af97",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c73d588ded54afebcb2909a3fdc949a",
+       "model_id": "f02b3b7f25e74c7489770f2d402b30af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +255,7 @@
     "                                    max_intensity=300, \n",
     "                                    point_radius=2.5)\n",
     "\n",
-    "# Step 5: Add heatmap layert to figure\n",
+    "# Step 5: Add heatmap layer to figure\n",
     "fig.add_layer(heatmap_layer)\n",
     "\n",
     "# Step 6: Plot the heatmap\n",
@@ -246,12 +266,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "3529612d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51c2aa0509a44ef786bbe75efb4625fd",
+       "model_id": "e0c7611e96524a36b9eab55f49cd1641",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,13 +307,17 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7febc0a8",
-   "metadata": {},
+   "id": "218c1edf",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74f3a58fc5ae4eb596d7aacd4ca0a8ef",
+       "model_id": "344281892fe94cddbbcc557579f3c78d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,13 +349,17 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4754886d",
-   "metadata": {},
+   "id": "bea282e5",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9dd919b35687409ab77356a37f7e3857",
+       "model_id": "54289495023a430fbc8da4bd3d4b39cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,29 +391,37 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "66a2e1e3",
-   "metadata": {},
+   "id": "e3a5fe0d",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Minimum desired temperature? 75\n",
-      "Mximum desired temperature? 90\n"
+      "Maximum desired temperature? 90\n"
      ]
     }
    ],
    "source": [
     "# Ask the customer to add minimum and maximum values for temperature\n",
     "min_temp = float(input('Minimum desired temperature? '))\n",
-    "max_temp = float(input('Mximum desired temperature? '))"
+    "max_temp = float(input('Maximum desired temperature? '))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a55e2b40",
-   "metadata": {},
+   "id": "c9c7133f",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -517,8 +557,12 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f6f598fb",
-   "metadata": {},
+   "id": "ffce782f",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -549,8 +593,12 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "26d1c62e",
-   "metadata": {},
+   "id": "e5b82782",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -704,8 +752,12 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "16e56615",
-   "metadata": {},
+   "id": "28b65c5c",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Set parameters for a hotel search\n",
@@ -718,9 +770,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4ba6b33a",
-   "metadata": {},
+   "execution_count": 14,
+   "id": "db3e6c6a",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -817,7 +873,7 @@
        "8                         River Place Manor  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +890,7 @@
     "    \n",
     "    try:\n",
     "        hotel_df.loc[index, 'Hotel Name'] = hotels['results'][0]['name']\n",
-    "    except (IndexError):\n",
+    "    except IndexError:\n",
     "        hotel_df.loc[index, 'Hotel Name'] = 'Hotel not found'\n",
     "        \n",
     "hotel_df.head()"
@@ -842,9 +898,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "32d41127",
-   "metadata": {},
+   "execution_count": 15,
+   "id": "0fd4b9b0",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "info_box_temp = '''\n",
@@ -859,9 +919,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "3a8f567f",
-   "metadata": {},
+   "execution_count": 16,
+   "id": "6f29e86f",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "hotel_info = [info_box_temp.format(**row) for index, row in hotel_df.iterrows()]"
@@ -869,14 +933,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "5f4dc5ff",
-   "metadata": {},
+   "execution_count": 17,
+   "id": "f83377ca",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d8cfe89cbd64d73b1a45c2e9e7a150f",
+       "model_id": "77e6df715bd24fbf879e69908f70a469",
        "version_major": 2,
        "version_minor": 0
       },
@@ -889,7 +957,7 @@
     }
    ],
    "source": [
-    "# Create heatmanp for desired temperature\n",
+    "# Create heatmap for desired temperature\n",
     "locations = hotel_df[['Lat','Lng']]\n",
     "max_temp = hotel_df['Max Temp']\n",
     "\n",
@@ -911,8 +979,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6daf2571",
-   "metadata": {},
+   "id": "6cf0173f",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
